# screensaver-cut

./: .gitignore  .gitmodules  CMakeLists.txt  CResource.cpp  CResource.h  Input.cpp  Input.h  MainGame.cpp  MainGame.hpp  Resources.rc  icon.pdn  main.cpp  vcpkg.json  xmake.lua
include/: Input.h  MainGame.hpp  Resources.h  Scene.h
res/Shaders/: screen.frag  screen.vert
src/: Input.cpp  MainGame.cpp  Resources.rc  Scene.cpp  main.cpp
src/macos/: MyScreenSaver.swift  cut-Bridging-Header.h  macosx.cpp
src/windows/: MainGame.cpp
